--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,49 +1,51 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600&display=swap");
 @import url("https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick.min.css");
 @import url("https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick-theme.min.css");
+@import url('simplebar/dist/simplebar.min.css');
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 :root {
-    --color-red: #e2293f;
-    --color-yellow: #f3b404;
-    --color-green: #41c485;
-    --color-gray: #c9c9c9;
-    --text-mainColor: #ffff;
-    --bg-mainColor: #0000;
+  --color-red: #e2293f;
+  --color-yellow: #f3b404;
+  --color-green: #41c485;
+  --color-gray: #c9c9c9;
+  --text-mainColor: #ffff;
+  --bg-mainColor: #0000;
 }
 
 html,
 body {
-    font-family: "Poppins", sans-serif;
+  font-family: "Poppins", sans-serif;
 }
 
 * {
-    color: #ffff;
+  color: #ffff;
+  letter-spacing: 0.05rem;
 }
 
 .container {}
 
-body::-webkit-scrollbar-track {
-    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
-    background-color: #f5f5f5;
-    border-radius: 10px;
+*::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  background-color: #f5f5f5;
+  border-radius: 10px;
 }
 
-body::-webkit-scrollbar {
-    width: 10px;
-    background-color: #f5f5f5;
+*::-webkit-scrollbar {
+  width: 10px;
+  background-color: #f5f5f5;
 }
 
-body::-webkit-scrollbar-thumb {
-    border-radius: 10px;
-    background-image: -webkit-gradient( linear, left bottom, left top, color-stop(0.4, #2bfa96), color-stop(0.8, #41c485));
+*::-webkit-scrollbar-thumb {
+  border-radius: 10px;
+  background-image: -webkit-gradient( linear, left bottom, left top, color-stop(0.4, #2bfa96), color-stop(0.8, #41c485));
 }
 
 .text-15 {
-    font-size: 15px;
+  font-size: 15px;
 }
 
 li {
-    list-style: none!important;
+  list-style: none!important;
 }
